<resources>
    <string name="app_name" translatable="false">InfoCorp</string>

    <string name="it_company">IT - company</string>
    <string name="it_query">\ IT - company in Republic of Belarus</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="phones">Phones</string>
    <string name="email" translatable="false">Email</string>
    <string name="website">Website</string>
    <string name="tools_description">Компания «Альфа» предлагает Вашему вниманию весь , </string>
    <string name="not_specified">Not specified</string>
    <string name="to_additionally">To additionally</string>
    <string name="search_by_name_text">Search for information about a company by name on the web using your browser</string>
    <string name="go">GO</string>
    <string name="search__location_by_address">Search for a corporation\'s location by its address using Google Maps</string>
    <string name="to_general">to general</string>
    <string name="search_on_the_egr">Search on the USR (EGR)</string>
    <string name="egr_text">The Unified State Register of Legal Entities and Individual Entrepreneurs is a nationwide system created to register legal entities and individual entrepreneurs registered in Belarus and provide access to information about them.</string>
    <string name="search_by_title">Search by title</string>
    <string name="hint_search_by_name">Enter the name of the corporation</string>
    <string name="hint_search_by_unp">Enter the UNP</string>
    <string name="search_by_unp">Search by UNP</string>
    <string name="search_in_internet">Search on the internet</string>
    <string name="search">search</string>
    <string name="show_location">Show location</string>
    <string name="response_from_usr_egr">Response from USR (EGR)</string>
    <string name="response_usr_egr">Response USR (EGR)</string>
    <string name="input_name_corp">Input name corp</string>
    <string name="user_corporations">User corporations</string>
    <string name="a_list_of_your_custom">A list of your custom corporations. Corporations that you have created and information about corporations that you have changed. The information is stored only on your device.</string>
    <string name="create_your_corporation">Here you can create your own corporation and send the information to a common database. The information is stored only on your device.</string>
    <string name="change_info_corporation">Here you can edit/change the information about the corporation and send it to a shared database. The information is stored only on your device.</string>
    <string name="create">Create your own corporation</string>
    <string name="edit_information">Edit information</string>
    <string name="send_the_data">If you want the data about this company to be included in the general database, send the data to the developer</string>
    <string name="user_corp">User corp</string>
    <string name="your_list">Your list</string>
    <string name="clear_fields">Clear fields</string>
    <string name="general">general</string>
    <string name="list_corp">list corp</string>
    <string name="favourites">favourites</string>
    <string name="new_corp">New corp</string>
    <string name="favourite_item">Favourite</string>
    <string name="poster">Poster</string>
    <string name="enter_url_image">Enter url image</string>
    <string name="create_new_corporation">Create new corporation</string>
    <string name="enter_title">Enter title. Required field</string>
    <string name="description_search">Description</string>
    <string name="enter_description">Enter description. Required field</string>
    <string name="address_search">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="phones_search">Phones</string>
    <string name="enter_phones">Enter phones</string>
    <string name="email_search" translatable="false">Email</string>
    <string name="enter_email">Enter email. Required field</string>
    <string name="website_search">Website</string>
    <string name="enter_url_website">Enter url website</string>
    <string name="create_btn">Create</string>
    <string name="send_to_developer_btn">Send to developer</string>
    <string name="title">Title</string>
    <string name="personal_information">Personal information</string>
    <string name="individual_or_legal">Individual or Legal</string>
    <string name="direction_of_activity">Direction of activity</string>
    <string name="personal_number_unp">Personal number (UNP)</string>
    <string name="address_of_company">Address of company</string>
    <string name="status_active_liquidated_etc">Status: Active, Liquidated, etc.</string>
    <string name="statistic">Statistic</string>
    <string name="total_unseen">Total unseen in the database: </string>
    <string name="total_companies">Total companies in the database: </string>
    <string name="total_in_your">Total companies in your database: </string>
    <string name="send_resume">send your resume</string>
    <string name="error_input_layout">The field should not be empty!</string>
    <string name="settings">settings</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="list_is_empty">Favourite list is empty</string>
    <string name="data_for_email">Data for email</string>
    <string name="change_the_title">Change the header</string>
    <string name="enter_the_email_header">Enter the email header</string>
    <string name="enter_the_email_content">Enter the email content</string>
    <string name="change_the_content">Change the content</string>
    <string name="content">Content</string>
    <string name="header">Header</string>
    <string name="be_attached">The information will be attached to the email when sending</string>
    <string name="link_to_the_resume">Link to the resume</string>
    <string name="change_the_link">Change the link to the resume</string>
    <string name="enter_the_link">Enter the link</string>
    <string name="send_to_developer">Information send to developer</string>
    <string name="saved_to_database">Information saved to your database</string>
    <string name="response_is_empty">Response is empty. Check your enter data</string>
    <string name="registration">Registration</string>
    <string name="log_in">Log in</string>
    <string name="enter_email_login">Enter email</string>
    <string name="enter_username">Enter password</string>
    <string name="username">Password</string>
    <string name="authorisation">Authorisation</string>
    <string name="account">account</string>
    <string name="account_card">Account</string>
    <string name="log_out">Log out</string>
    <string name="registration_is_completed">Registration is completed</string>
    <string name="unknown_user">Unknown user</string>
    <string name="password_error">Password should be at least 6 characters</string>
    <string name="email_error">The email address is badly formatted</string>
    <string name="login_error">The email address is already in use by another account</string>
    <string name="your_list_is_empty">Your list is empty</string>
    <string name="notes">Notes</string>
    <string name="add_notes">Add notes</string>
    <string name="status">Status</string>
    <string name="sent_text">Sent:</string>
    <string name="response_text">Response:</string>
    <string name="result">Result</string>
    <string name="invite_text">invite</string>
    <string name="rejection_text">rejection</string>
    <string name="not_responded_text">not responded</string>
    <string name="save_notes">save changes</string>
    <string name="submitted_resumes">Submitted resumes</string>
    <string name="list_of_resumes">The list of resumes you have sent to the company</string>
    <string name="total_resume_sent">Total resume sent:</string>
    <string name="response_date">Enter date</string>
    <string name="not_responded">Not responded:</string>
    <string name="rejection">Rejections:</string>
    <string name="invites">Invites:</string>
    <string name="resume">Resume:</string>
</resources>