<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/generalFragment"
        android:icon="@drawable/info_logo"
        android:title="@string/general"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/listCorporationsFragment"
        android:icon="@drawable/list_logo"
        android:title="@string/list_corp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/grade"
        android:title="@string/favourites"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item5"
        android:title=""
        android:enabled="false"/>
</menu>