<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/normal_padding_size">

    <androidx.cardview.widget.CardView
        android:id="@+id/createResumeCorp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/second_background_color"
        app:cardCornerRadius="@dimen/card_corners_radius"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/normal_padding_size">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPosterResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin_size"
                android:text="@string/title"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPosterResume"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleText"
                style="@style/MyStyle.TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:text="Tinkoff" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin_size"
                android:text="@string/status"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvTitleText"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSent"
                style="@style/MyStyle.TextViewNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:textIsSelectable="false"
                android:text="@string/sent_text"
                app:layout_constraintStart_toStartOf="@+id/tvStatus"
                app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSentData"
                style="@style/MyStyle.TextViewNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin_size"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvSent"
                app:layout_constraintTop_toBottomOf="@+id/tvStatus"
                tools:text="11.12.2024" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvResponse"
                style="@style/MyStyle.TextViewNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:textIsSelectable="false"
                android:text="@string/response_text"
                app:layout_constraintStart_toStartOf="@+id/tvSent"
                app:layout_constraintTop_toBottomOf="@+id/tvSent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvResponseData"
                style="@style/MyStyle.TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="@+id/tvSentData"
                app:layout_constraintStart_toStartOf="@+id/tvSentData"
                app:layout_constraintTop_toBottomOf="@+id/tvSentData"
                tools:text="22.12.2024" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin_size"
                android:text="@string/result"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPosterResume" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/MyStyle.RadioButtons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvResult"
                app:layout_constraintTop_toBottomOf="@+id/tvResult">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/not_responded_text"
                    android:textColor="@color/hint_text_color" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/rejection_text"
                    android:textColor="@color/red" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/invite_text"
                    android:textColor="@color/green" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNotesText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin_size"
                android:text="@string/notes"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNotes"
                style="@style/MyStyle.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/tvNotesText"
                app:layout_constraintStart_toStartOf="@+id/tvNotesText"
                app:layout_constraintTop_toBottomOf="@+id/tvNotesText"
                app:startIconDrawable="@drawable/notes"
                app:startIconTint="@color/hint_text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNotesInput"
                    style="@style/MyStyle.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_notes" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveNotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/MyStyle.ButtonNormal"
                android:text="@string/save_notes"
                app:layout_constraintEnd_toEndOf="@+id/etNotes"
                app:layout_constraintStart_toStartOf="@+id/etNotes"
                app:layout_constraintTop_toBottomOf="@+id/etNotes" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>