<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/normal_padding_size">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <androidx.cardview.widget.CardView
            android:id="@+id/createUserCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/normal_padding_size"
            app:cardBackgroundColor="@color/second_background_color"
            app:cardCornerRadius="@dimen/card_corners_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DescriptionCard"
            tools:context=".presentation.createusercorp.CreateUserCorporationFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/normal_padding_size">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmailType" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitleCv"
                    style="@style/MyStyle.TextViewEditTextTittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmailType" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitleCvText"
                    style="@style/MyStyle.TextViewNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitleCv"
                    app:layout_constraintStart_toStartOf="@+id/tvTitleCv"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleCv"
                    tools:text="Android developer" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/email"
                    app:layout_constraintBottom_toBottomOf="@+id/tvEmailType"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvEmailType" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEmailType"
                    style="@style/MyStyle.TextViewBig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_for_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDescriptionCv"
                    style="@style/MyStyle.TextViewEditTextTittle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleCvText" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDescriptionCvText"
                    style="@style/MyStyle.TextViewNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitleCvText"
                    app:layout_constraintStart_toStartOf="@+id/tvDescriptionCv"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescriptionCv"
                    tools:text="@string/change_info_corporation" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLinkCv"
                    style="@style/MyStyle.TextViewEditTextTittle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/link_to_the_resume"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescriptionCvText" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLinkCvText"
                    style="@style/MyStyle.TextViewNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:autoLink="web"
                    android:textColorLink="@color/text_color_normal"
                    app:layout_constraintEnd_toEndOf="@+id/tvLinkCv"
                    app:layout_constraintStart_toStartOf="@+id/tvLinkCv"
                    app:layout_constraintTop_toBottomOf="@+id/tvLinkCv"
                    tools:text="http//:" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInputLink"
                    style="@style/MyStyle.TextViewEditTextTittle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change_the_link"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCnangeContentCvText" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etCnangeLinkCvText"
                    style="@style/MyStyle.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/tvInputLink"
                    app:layout_constraintStart_toStartOf="@+id/tvInputLink"
                    app:layout_constraintTop_toBottomOf="@+id/tvInputLink">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLinkCvInput"
                        style="@style/MyStyle.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_the_link" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInputDescription"
                    style="@style/MyStyle.TextViewEditTextTittle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change_the_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLinkCvText" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etCnangeHeaderCvText"
                    style="@style/MyStyle.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitleCvText"
                    app:layout_constraintStart_toStartOf="@+id/tvInputDescription"
                    app:layout_constraintTop_toBottomOf="@+id/tvInputDescription">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDescriptionInput"
                        style="@style/MyStyle.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_the_email_header" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInputContentCv"
                    style="@style/MyStyle.TextViewEditTextTittle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change_the_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCnangeHeaderCvText" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etCnangeContentCvText"
                    style="@style/MyStyle.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitleCvText"
                    app:layout_constraintStart_toStartOf="@+id/tvInputContentCv"
                    app:layout_constraintTop_toBottomOf="@+id/tvInputContentCv">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etContentInput"
                        style="@style/MyStyle.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_the_email_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCreateText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingTop="24dp"
                    android:text="@string/be_attached"
                    android:textColor="@color/unknown_text_color"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="@+id/btnCreate"
                    app:layout_constraintStart_toStartOf="@+id/btnCreate"
                    app:layout_constraintTop_toBottomOf="@+id/etCnangeLinkCvText" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCreate"
                    style="@style/MyStyle.ButtonNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="@string/create_btn"
                    app:layout_constraintEnd_toEndOf="@+id/etCnangeContentCvText"
                    app:layout_constraintStart_toStartOf="@+id/etCnangeContentCvText"
                    app:layout_constraintTop_toBottomOf="@+id/tvCreateText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>